# booster_mcp

./: .gitignore  COOKBOOK.md  LICENSE  MARKETPLACE.md  README.md  chunker.py  city_server.py  context7_bridge.py  context_provider.py  embedder.py  flipchart.py  graphs.py  indexer.py  install.ps1  install.sh  parser_router.py  py3.bat  pyproject.toml  release_notes.md  repomap.py  requirements.txt  server.py  skill_installer.py  test_all.py  test_city.html  test_mcp.py  toolkit.py  vector_index.py  visualizer.py  watcher.py
.github/workflows/: test.yml
skills/booster-architecture-map/: SKILL.md
skills/booster-bug-hunt/: SKILL.md
skills/booster-context-inject/: SKILL.md
skills/booster-deep-dive/: SKILL.md
skills/booster-feature-add/: SKILL.md
skills/booster-flipchart/: SKILL.md
skills/booster-onboard/: SKILL.md
skills/booster-project-memory/: SKILL.md
skills/booster-refactor/: SKILL.md
skills/booster-review/: SKILL.md
